--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,7 @@
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <!--<groupId>org.sonarsource.scanner.maven</groupId>-->
+		  <!--<groupId>org.sonarsource.scanner.maven</groupId>-->
           <artifactId>sonar-maven-plugin</artifactId>
           <version>3.0.1</version>
         </plugin>
