--- a/pom.xml
+++ b/pom.xml
@@ -138,7 +138,8 @@
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <!--<groupId>org.sonarsource.scanner.maven</groupId>-->
-		  <!--<groupId>org.sonarsource.scanner.maven</groupId>-->
+		  <!--<groupId>for git commit</groupId>-->
+		  <!--<groupId>for git commit and push</groupId>-->
           <artifactId>sonar-maven-plugin</artifactId>
           <version>3.0.1</version>
         </plugin>
